force-app/main/default/objects/SurveySales__c/SurveySales__c.object-meta.xml
<CustomObject>
    <label>Survey Sales</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>