force-app/main/default/objects/SurveySales__c/fields/AccountPersonal__c.field-meta.xml
<CustomField>
    <fullName>AccountPersonal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountPersonal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Sales</relationshipLabel>
    <relationshipName>Survey_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>