force-app/main/default/objects/SurveySales__c/fields/After_Sale_Score__c.field-meta.xml
<CustomField>
    <fullName>After_Sale_Score__c</fullName>
    <formula>(VALUE( TEXT( Question_4_7__c ) ) + VALUE( TEXT( Question_4_8__c ) ) + IF( (TEXT( Question_6__c ) = &apos;Có&apos; || TEXT(Question_6__c ) = &apos;Yes&apos;) , 10, 1) ) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After Sale Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>