force-app/main/default/objects/SurveySales__c/fields/Before_Sale_Score__c.field-meta.xml
<CustomField>
    <fullName>Before_Sale_Score__c</fullName>
    <formula>(VALUE( TEXT(Question_4_2__c) ) + VALUE( TEXT( Question_4_1__c ) ))/ 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Before Sale Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>