force-app/main/default/objects/SurveySales__c/fields/Bike_Brand__c.field-meta.xml
<CustomField>
    <fullName>Bike_Brand__c</fullName>
    <label>Bike Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Triumph</fullName>
            </value>
            <value>
                <fullName>Kawasaki</fullName>
            </value>
            <value>
                <fullName>Suzuki</fullName>
            </value>
            <value>
                <fullName>KTM</fullName>
            </value>
            <value>
                <fullName>Harley</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>