force-app/main/default/objects/SurveySales__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Bán hàng</fullName>
            </value>
            <value>
                <fullName>PCA</fullName>
                <isActive>false</isActive>
                <label>PCA</label>
            </value>
            <value>
                <fullName>Service Multi Brands</fullName>
                <isActive>false</isActive>
                <label>Service Multi Brands</label>
            </value>
            <value>
                <fullName>Service Yamaha</fullName>
                <isActive>false</isActive>
                <label>Service Yamaha</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>