force-app/main/default/objects/SurveySales__c/fields/Opty_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opty_Owner__c</fullName>
    <formula>Order__r.Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opty Owner</label>
    <type>Text</type>
</CustomField>