force-app/main/default/objects/SurveySales__c/fields/Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner__c</fullName>
    <formula>Order__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Owner</label>
    <type>Text</type>
</CustomField>