force-app/main/default/objects/SurveySales__c/fields/Question_0__c.field-meta.xml
<CustomField>
    <fullName>Question_0__c</fullName>
    <inlineHelpText>Was your purchase Motorcycles at Revzone Yamaha Motor Saigon?</inlineHelpText>
    <label>Question 0</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Có</fullName>
            </value>
            <value>
                <fullName>Không</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>