force-app/main/default/objects/SurveySales__c/fields/Question_10__c.field-meta.xml
<CustomField>
    <fullName>Question_10__c</fullName>
    <inlineHelpText>10 - Which of the following statements best represent you? (Select 1)</inlineHelpText>
    <label>Question 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First time purchaser</fullName>
            </value>
            <value>
                <fullName>Purchase for Replacement</fullName>
            </value>
            <value>
                <fullName>Purchase addition</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Khách hàng lần đầu tiên mua xe phân khối lớn</fullName>
            </value>
            <value>
                <fullName>Khách hàng mua thay thế</fullName>
            </value>
            <value>
                <fullName>Khách hàng mua thêm</fullName>
            </value>
            <value>
                <fullName>Khác</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>