force-app/main/default/objects/SurveySales__c/fields/Question_11__c.field-meta.xml
<CustomField>
    <fullName>Question_11__c</fullName>
    <inlineHelpText>11 - Have you considered alternatives before purchasing your Yamaha Motorcycles? (Select 1)</inlineHelpText>
    <label>Question 11</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Yes_No</valueSetName>
    </valueSet>
</CustomField>