force-app/main/default/objects/SurveySales__c/fields/Question_11_Brand_3__c.field-meta.xml
<CustomField>
    <fullName>Question_11_Brand_3__c</fullName>
    <label>Question 11 Brand 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>