force-app/main/default/objects/SurveySales__c/fields/Question_11_Model_2__c.field-meta.xml
<CustomField>
    <fullName>Question_11_Model_2__c</fullName>
    <label>Question 11 Model 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>