force-app/main/default/objects/SurveySales__c/fields/Question_13_12__c.field-meta.xml
<CustomField>
    <fullName>Question_13_12__c</fullName>
    <inlineHelpText>13.12 - Sound quality (Select 1)</inlineHelpText>
    <label>Question 13.12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Point_1_to_10</valueSetName>
    </valueSet>
</CustomField>