force-app/main/default/objects/SurveySales__c/fields/Question_1_CSI__c.field-meta.xml
<CustomField>
    <fullName>Question_1_CSI__c</fullName>
    <label>Question 1 OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_question</valueSetName>
    </valueSet>
</CustomField>