force-app/main/default/objects/SurveySales__c/fields/Respond_Date__c.field-meta.xml
<CustomField>
    <fullName>Respond_Date__c</fullName>
    <label>Respond Date</label>
    <type>Date</type>
</CustomField>