force-app/main/default/objects/SurveySales__c/fields/Sale_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sale_Owner__c</fullName>
    <formula>Order__r.Order_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Owner</label>
    <type>Text</type>
</CustomField>