force-app/main/default/objects/SurveySales__c/fields/Sales_Score__c.field-meta.xml
<CustomField>
    <fullName>Sales_Score__c</fullName>
    <formula>(VALUE( TEXT(  Question_4_3__c ) ) + VALUE( TEXT(  Question_4_4__c )) + VALUE( TEXT(  Question_4_5__c ))+ VALUE( TEXT(  Question_4_9__c ))  +  IF( (TEXT(Question_5__c) = &apos;Có&apos;  || TEXT(Question_5__c) = &apos;Yes&apos;) , 10, 1)) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>