force-app/main/default/objects/SurveySales__c/fields/Score_4_1__c.field-meta.xml
<CustomField>
    <fullName>Score_4_1__c</fullName>
    <formula>VALUE( TEXT( Question_4_1__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score 4.1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>