force-app/main/default/objects/SurveySales__c/fields/Score_6__c.field-meta.xml
<CustomField>
    <fullName>Score_6__c</fullName>
    <formula>IF( (TEXT(  Question_6__c ) = &apos;Có&apos; || TEXT( Question_6__c ) = &apos;Yes&apos;) , 10, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score 6</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>